--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,19 @@
   "description": "An auction website",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js",
+    "migrate": "node scripts/migrate.js",
+    "seed:admin": "node scripts/user.seed.js"
   },
   "author": "Ashique",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mysql2": "^3.14.5"
   }
 }
