--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "migrate": "node scripts/migrate.js",
-    "seed:admin": "node scripts/user.seed.js"
+    "seed:admin": "node scripts/user.seed.js",
+    "seed:categories": "node scripts/category.seed.js"
   },
   "author": "Ashique",
   "license": "ISC",
