product model, seed

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon server.js",
     "migrate": "node scripts/migrate.js",
     "seed:admin": "node scripts/user.seed.js",
-    "seed:categories": "node scripts/category.seed.js"
+    "seed:categories": "node scripts/category.seed.js",
+    "seed:products": "node scripts/product.seed.js"
   },
   "author": "Ashique",
   "license": "ISC",
