--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "migrate": "node scripts/migrate.js",
     "seed:admin": "node scripts/user.seed.js",
     "seed:categories": "node scripts/category.seed.js",
-    "seed:products": "node scripts/product.seed.js"
+    "seed:products": "node scripts/product.seed.js",
+    "seed:all": "npm run seed:admin && npm run seed:categories && npm run seed:products"
   },
   "author": "Ashique",
   "license": "ISC",
